# hn-scraper

./: .dockerignore  .gitignore  README.md  dataExporterDockerFile  data_export.py  embeddingDockerFile  embeddings.py  hn_api.py  main.py  persistence.py  polling.py  polling_embedding.py  pyproject.toml  schedulerDockerFile  workerDockerFile
script/: scheduler.sh  worker.sh
